# sigaa_bot

./: .gitignore  .travis.yml  README.md  app.py  bot.py  main.py  pyproject.toml  requirements.txt  sigaabot_shell.bash
classes/: sigaa.py  user.py
tests/: unit_test.py
